<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ExtraTranslation">
    <string name="test_ap"><b>4</b>/10</string>
    <string name="action_add_activity">Tambah Aktivitas</string>
    <string name="action_yes">Ya</string>
    <string name="action_sure">Yakin</string>
    <string name="action_not">Tidak</string>
    <string name="action_cancel">Batal</string>
    <string name="action_save">Simpan</string>
    <string name="error_empty_field">%s tidak boleh kosong!</string>
    <string name="placeholder_add_date">Pilih tanggal %s</string>
    <string name="label_add_activity_underline"><u>Tambah Aktivitas</u></string>
    <string name="label_add_activity">Tambah Aktivitas</string>
    <string name="label_show_guide">Lihat Panduan</string>
    <string name="label_see_all"><u>Lihat Semua</u></string>
    <string name="label_see_history_underline"><u>Lihat Riwayat</u></string>
    <string name="label_see_history">Lihat Riwayat</string>
    <string name="label_title_empty_activity_sop">Tidak ada aktivitas ditemukan</string>
    <string name="label_description_empty_activity_sop">Untuk menambahkan aktivitas Anda silakan klik tombol Tambah Aktivitas Baru dibawah ini.</string>
    <string name="label_additional_activity">Aktivitas Tambahan</string>
    <string name="title_detail_activity">Aktivitas Budidaya</string>
    <string name="title_history_activity">Riwayat Aktivitas</string>
    <string name="label_my_activity">Aktivitas Kamu</string>
    <string name="label_miss">Aktivitas Terlewat</string>
    <string name="label_today">(hari ini)</string>
    <string name="tab_pass">Selesai</string>
    <string name="tab_miss">Terlewat</string>
    <string name="sample_date_time">Senin, 1</string>
    <string name="sample_activity_name">Prabudidaya</string>
    <string name="sample_detail_activity_name">Penyiapan Lahan(1/1)</string>
    <string name="sample_description_detail_activity">Menyiapkan jenis obat dan jumlah stok yang dibutuhkan.</string>
    <string name="sample_activity_dialog">Prabudidaya</string>
    <string name="sample_guide_info">Mohon izinkan saya menyampaikan panduan ini agar kalian semakin mantap</string>
    <string name="sample_guide_date">Selasa, 24 Mei 2022</string>
    <string name="sample_guide_content">
        <li>Menyiapkan jenis obat dan jumlah sesuai stok yang dibutuhkan</li>\n
        <li>Menyiapkan jenis obat dan jumlah sesuai stok yang dibutuhkan</li>\n
        <li>Menyiapkan jenis obat dan jumlah sesuai stok yang dibutuhkan</li>\n
        <li>Menyiapkan jenis obat dan jumlah sesuai stok yang dibutuhkan</li>\n
    </string>
    <string name="label_choose_phase_activity">Pilih Aktivitas</string>
    <string name="label_choose_year_activity">Tahun</string>
    <string name="label_guide">Panduan</string>
    <string name="label_activity_done">Aktivitas Selesai</string>
    <string name="label_activity_missed">Aktivitas Terlewat"</string>
    <string name="placeholder_title_add_date_activity">Mulai Budidaya</string>
    <string name="placeholder_desc_add_date_activity">Untuk memulai budidaya, Silahkan pilih tanggal saat anda menyiapkan kandang, budidaya</string>
    <string name="hint_add_date">Tanggal %s</string>
    <string name="placeholder_activity_done">"${data.activitiesCompleted}\n${data.totalActivities}"</string>
    <string name="placeholder_activity_missed">"${data.activitiesMissed}\n${data.totalActivities}"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_update_record">Ubah Data Kegiatan</string>
    <string name="action_save_updated_recoed">Simpan Perubahan</string>
    <string name="action_create_record">Buat Pencatatan Sekarang</string>
    <string name="not_empty_default_error">Data ini tidak boleh kosong</string>
    <string name="not_checked_default_error">Minimal salah satu pilihan harus diceklis</string>
    <string name="title_sub_vessel_detail_livestock">Detail Kandang</string>
    <string name="title_sub_vessel_detail_fishery">Detail Kolam</string>
    <string name="title_sub_vessel_detail_agriculture">Detail Lahan</string>
    <string name="name_sub_vessel_agriculture">Lahan</string>
    <string name="name_sub_vessel_livestock">Kandang</string>
    <string name="name_sub_vessel_fishery">Kolam</string>
    <string name="label_inactive_sub_vessel">%s Tidak Aktif</string>
    <string name="label_sub_vessel_id">ID Kandang</string>
    <string name="label_location">Lokasi</string>
    <string name="label_commodities">Komoditas</string>
    <string name="label_cultivation_cycle">Siklus Budidaya</string>
    <string name="label_cultivation_date">Tanggal Budidaya</string>
    <string name="label_livestock_age">Umur Ternak</string>
    <string name="label_cycle_to">Siklus ke-</string>
    <string name="label_strain">Strain</string>
    <string name="label_total_livestock">Total Ternak</string>
    <string name="label_leftover_feed">Sisa Pakan</string>
    <string name="label_error_photo_upload_snackbar">Gagal mengunggah photo</string>
    <string name="label_cultivation_activity">Aktivitas Budidaya</string>
    <string name="label_title_empty_cultivation_activity">Belum Ada Aktivitas Budidaya</string>
    <string name="label_add_new_cultivation_activity_sop">Tambah Aktivitas</string>
    <string name="label_message_confirm_add_activity_sop">Apakah kamu yakin ingin menambahkan aktivitas baru ini?</string>
    <string name="label_success_add_activity">Berhasil menambah aktivitas</string>
    <string name="label_success_add_transaction">Berhasil mengajukan transaksi baru</string>
    <string name="label_message_confirm_update_sop">Apakah kamu yakin untuk merubah data aktivitas</string>
    <string name="label_activity_date">Tanggal Kegiatan</string>
    <string name="label_price">Biaya</string>
    <string name="label_note">Catatan</string>
    <string name="label_photo_upload">Upload Foto</string>
    <string name="label_success_update_snackbar">Berhasil merubah data</string>
    <string name="label_error_update_snackbar">Gagal mengubah data, coba beberapa saat lagi</string>
    <string name="label_success_insert_snackbar">Berhasil menyimpan data</string>
    <string name="label_error_insert_snackbar">Gagal menyimpan data, coba beberapa saat lagi</string>
    <string name="label_insert_additional_activity">Simpan</string>
    <string name="placeholder_activity_date">Pilih tanggal kegiatan</string>
    <string name="placeholder_price">Masukkan biaya</string>
    <string name="placeholder_note">Tambahkan catatan kegiatan</string>
    <string name="title_detail_area">Detail Area</string>
    <string name="label_vessel_wide_area">Luas Area</string>
    <string name="label_used">Digunakan</string>
    <string name="label_remain">Sisa</string>
    <string name="label_name">Nama</string>
    <string name="label_company">Perusahaan</string>
    <string name="label_apply">Terapkan</string>
    <string name="title_detail_sub_area">Detail Sub Area</string>
    <string name="label_more"><u>Selengkapnya</u></string>
    <string name="label_sub_vessel_name">
        <![CDATA[<font color="#212121">%s </font><font color="#9E9E9E">(%sHa)</font>]]>
    </string>
    <string name="label_size"> (%sHa)</string>
    <string name="label_active">Aktif</string>
    <string name="label_inactive">Tidak Aktif</string>
    <string name="label_weight">%s</string>
    <string name="label_day">%s Hari</string>
    <string name="label_live_stock">%s Ekor</string>
    <string name="label_data_unavailable">Belum terdata</string>
    <string name="label_commodity_unavailable">Data komoditas tidak tersedia</string>
    <string name="label_sub_sector">Sub Sektor</string>
    <string name="label_select_all_subsector">Pilih Semua Sub Sektor</string>
    <string name="action_apply">Terapkan</string>
    <string name="label_all_subsector">Pilih Semua Sub Sektor</string>
    <string name="label_title_empty_list_sub_vessel">Belum Ada Sub Area Terdaftar</string>
    <string name="label_description_empty_list_sub_vessel">Silahkan daftar kemitraan terlebih dahulu untuk dapat melakukan aktivtas monitoring</string>
    <string name="label_register_new_partnership">Daftar Kemitraan Baru</string>
    <string name="label_activities">Aktivitas</string>
    <string name="label_transaction">Transaksi</string>
    <string name="label_incident">Insiden</string>
    <string name="label_button_activities">Tambah Aktivitas Baru</string>
    <string name="label_button_transaction">Tambah Transaksi Baru</string>
    <string name="label_button_incident">Laporkan Insiden</string>
    <string name="label_disease">Penyakit</string>
    <string name="label_title_empty_list_incident">Tidak ada insiden ditemukan</string>
    <string name="label_description_empty_list_empty">Untuk membuat insiden pada aktivitas budidaya Anda silakan klik tombol Laporkan Insiden dibawah ini.</string>
    <string name="title_add_incident">Insiden Baru</string>
    <string name="label_date_incident">Tanggal Insiden</string>
    <string name="label_date_incident_ph">Pilih tanggal insiden</string>
    <string name="label_category_incident">Kategori Insiden</string>
    <string name="label_category_incident_ph">Pilih kategori insiden</string>
    <string name="label_incident_ph">Pilih insiden</string>
    <string name="label_effort">Upaya yang dilakukan</string>
    <string name="label_effort_ph">Tuliskan upaya yang dilakukan</string>
    <string name="label_effected">Jumlah Populasi Terdampak</string>
    <string name="label_effected_ph">Jumlah populasi terdampak</string>
    <string name="label_cost">Biaya (Opsional)</string>
    <string name="label_cost_ph">Masukkan biaya</string>
    <string name="label_notes">Catatan (Opsional)</string>
    <string name="label_notes_ph">Tambah catatan kegiatan</string>
    <string name="label_sent">Kirim</string>
    <string name="label_required">Field wajib diisi</string>
    <string name="label_inprogress">Berlangsung</string>
    <string name="label_done">Selesai</string>
    <string name="label_targets">Target (Ton)</string>
    <string name="label_realizations">Realisasi (Ton)</string>
    <string name="label_productions">Produksi (Ton)</string>
    <string name="title_incident_report">Laporan Insiden</string>
    <string name="title_incident_detail">Detail Insiden</string>
    <string name="label_details">Details</string>
    <string name="label_discussion">Diskusi</string>
    <string name="label_incident_finish">Ingin menyelesaikan Insiden?&#160;</string>
    <string name="label_incident_closed"><u>Tutup Insiden Sekarang</u></string>
    <string name="label_incident_type">Jenis Insiden</string>
    <string name="label_incident_affected">Jumlah populasi terdampak</string>
    <string name="label_incident_effort">Upaya yang dilakukan</string>
    <string name="label_incident_cost">Biaya</string>
    <string name="label_incident_note">Catatan</string>
    <string name="label_incident_photo">Foto</string>
    <string name="label_upload_photo">Upload Foto (Opsional)</string>
    <string name="label_activate_the_livestock">Aktifkan %s</string>
    <string name="label_livestock_activation">Aktivasi %s</string>
    <string name="label_desc_activation_live_stock">Untuk mengaktifkan %s, Silakan pilih tanggal untuk memulai aktivitas budidaya.</string>
    <string name="label_date_activation">Tanggal Aktivasi</string>
    <string name="title_add_transaction">Transaksi Baru</string>
    <string name="label_transaction_product_type">Jenis Panen Yang Dikirim</string>
    <string name="label_transaction_product_type_ph">Pilih jenis panen yang dikirim</string>
    <string name="label_transaction_price_offer">Penawaran Harga / Kg</string>
    <string name="label_transaction_price_offer_ph">Masukkan harga penawaran</string>
    <string name="label_transaction_bruto">Berat Kotor</string>
    <string name="label_transaction_bruto_ph">Masukkan berat kotor</string>
</resources>