<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.telkom.legion.component.toolbar.LgnToolbarWhite
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_add_incident"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/view"
            layout="@layout/layout_separator"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddIncident"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/dimen_16dp">

                <com.telkom.legion.component.textfield.LgnCalendarField
                    android:id="@+id/etDateIncident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_date_incident"
                    app:dateFormat="FULL_DATE"
                    app:isRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:placeholderText="@string/label_date_incident_ph" />

                <com.telkom.legion.component.textfield.LgnDropdownField
                    android:id="@+id/etCategoryIncident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_category_incident"
                    android:visibility="gone"
                    app:isRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etDateIncident"
                    app:placeholderText="@string/label_category_incident_ph" />

                <com.telkom.legion.component.textfield.LgnDropdownField
                    android:id="@+id/etIncident"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_incident"
                    android:visibility="gone"
                    app:isRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCategoryIncident"
                    app:placeholderText="@string/label_incident_ph" />

                <com.telkom.legion.component.textfield.LgnSingleField
                    android:id="@+id/etEffectedPopulation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_effected"
                    app:isRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etIncident"
                    app:placeholderText="@string/label_effected_ph" />

                <com.telkom.legion.component.textfield.LgnTextAreaField
                    android:id="@+id/etEffortToDo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_effort"
                    app:isRequired="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEffectedPopulation"
                    app:placeholderText="@string/label_effort_ph" />

                <com.telkom.legion.component.textfield.LgnSingleField
                    android:id="@+id/etCost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_cost"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEffortToDo"
                    app:placeholderText="@string/label_cost_ph"
                    app:prefixText="Rp " />

                <com.telkom.legion.component.textfield.LgnTextAreaField
                    android:id="@+id/etNotes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_notes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etCost"
                    app:placeholderText="@string/label_notes_ph" />

                <com.telkom.legion.component.image.MultiplePhotoField
                    android:id="@+id/multiplePhoto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_upload_photo"
                    android:layout_marginTop="@dimen/dimen_16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etNotes"
                    app:photoLimit="3" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/view2"
            layout="@layout/layout_separator"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddIncident"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.telkom.legion.component.button.fill.LgnPrimaryFitButton
            android:id="@+id/btnAddIncident"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16dp"
            android:text="@string/label_sent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>